# galaxy_3d_engine

./: CLAUDE.md  Cargo.toml  README.md  USAGE.fr.md  USAGE.md  VULKAN_DEBUG.md  galaxy_3d_engine_dev.md
galaxy_3d_engine/: Cargo.toml
galaxy_3d_engine/src/: engine.rs  engine_tests.rs  error.rs  error_tests.rs  galaxy_3d_engine.rs  lib.rs  log.rs  log_tests.rs
galaxy_3d_engine/src/camera/: camera.rs  camera_tests.rs  frustum.rs  frustum_tests.rs  lod.rs  mod.rs  (+5 more)
galaxy_3d_engine/tests/: command_list_integration_tests.rs  engine_integration_tests.rs  gpu_test_utils.rs  logging_integration_tests.rs  pipeline_integration_tests.rs  render_graph_integration_tests.rs  resource_integration_tests.rs  scene_integration_tests.rs  target_integration_tests.rs
galaxy_3d_engine_renderer_vulkan/: Cargo.toml
galaxy_3d_engine_renderer_vulkan/src/: debug.rs  lib.rs  vulkan.rs  vulkan_binding_group.rs  vulkan_buffer.rs  vulkan_command_list.rs  vulkan_context.rs  vulkan_debug.rs  vulkan_descriptor_set.rs  vulkan_format_tests.rs  vulkan_frame_buffer.rs  vulkan_pipeline.rs  vulkan_render_pass.rs  vulkan_render_target.rs  vulkan_renderer.rs  vulkan_renderer_buffer.rs  vulkan_renderer_command_list.rs  vulkan_renderer_device.rs  vulkan_renderer_frame.rs  vulkan_renderer_pipeline.rs  vulkan_renderer_render_pass.rs  vulkan_renderer_render_target.rs  vulkan_renderer_shader.rs  vulkan_renderer_swapchain.rs  vulkan_renderer_texture.rs  vulkan_sampler.rs  vulkan_shader.rs  vulkan_swapchain.rs  vulkan_sync.rs  vulkan_texture.rs
galaxy_3d_engine_renderer_vulkan/tests/: vulkan_renderer_tests.rs
(+135 files in other folders)
