[package]
name = "galaxy_3d_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
glam = { version = "0.29", features = ["bytemuck"] }
bytemuck = "1"
slotmap = "1"
colored = "2"
chrono = "0.4"

[dev-dependencies]
galaxy_3d_engine_renderer_vulkan = { path = "../galaxy_3d_engine_renderer_vulkan" }
serial_test = "3"
